# alacritty

./: Cargo.toml
alacritty/: Cargo.toml
alacritty/res/: decoration.f.glsl  decoration.v.glsl  rect.f.glsl  rect.v.glsl  text.f.glsl  text.v.glsl
alacritty/src/: event.rs
alacritty/src/display/: content.rs  mod.rs  window.rs
alacritty/src/renderer/: mod.rs  rects.rs  shader.rs
alacritty_terminal/src/: ansi.rs
alacritty_terminal/src/term/: cell.rs  mod.rs
docs/: escape_support.md
